# avatar_test

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  PROJECT_BRIEF.md  README.md  pyproject.toml  requirements-animatediff.txt  requirements-policy.txt  requirements.txt
.cursor/rules/: contract-governance.mdc  infrastructure.mdc  philosophy.mdc
.github/: PULL_REQUEST_TEMPLATE.md  sacred-files.yml
.github/ISSUE_TEMPLATE/: sacred-file-change.md
.github/workflows/: policy-enforcement.yml
.semgrep/rules/: code-clarity.yaml  code-quality.yaml  fail-fast.yaml  no-bypass.yaml  testing.yaml
config/: animatediff.yaml  hardware.yaml  venvs.yaml
docs/: animatediff_setup.md
docs/ai_codev/: AI_CONTEXT_FULL.md  AI_REFRESH.md  ANIMATEDIFF_IMPLEMENTATION_PLAN.md  PHILOSOPHY.md  TESTING.md  WORKFLOW.md
docs/architecture_suggestions/: DAG_PIPELINE.md
models/motion_adapter/: config.json
scripts/: check_fail_fast.py  check_nosemgrep.py  check_test_count.py  init_project.ps1  init_project.sh  lock-governance.ps1  lock-governance.sh  run_all_tests.py  run_policy_tool.py  setup-github.ps1  setup-github.sh  test_policy.py  unlock-governance.ps1  unlock-governance.sh  validate_setup.py
src/animatediff/: __init__.py  config_loader.py  generate.py  paths.py  pipeline.py
src/core/: __init__.py
src/core/base/: __init__.py  example.py  validated.py
src/models/: __init__.py  base.py
tests/: conftest.py
tests/unit/: test_example.py  test_fail_fast.py
